# jetracer_remote_machine

./: .env  .gitattributes  Dockerfile  README.md  docker-compose.yml  setup.sh  zenoh_entrypoint.sh
jetracer_remote/: package.xml  setup.cfg  setup.py
jetracer_remote/jetracer_remote/: calibration.py  color_tracking.py  contours.py  cv_video.py  deep_face_tracking.py  face_detect.py  motion_detect.py  object_tracking.py  pose.py  teleop_joy.py  teleop_key.py  wsl_joy_receiver.py
jetracer_remote/launch/: calibration_launch.py  color_tracking_launch.py  contours_launch.py  cv_video_launch.py  deep_face_tracking_launch.py  face_detect_launch.py  joy_launch.py  motion_detect_launch.py  object_tracking_launch.py  pose_launch.py  rviz_launch.py
jetracer_remote/rviz/: jetracer.rviz
